--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "json-server": "^0.16.0",
     "prettier": "^1.19.1"
   }
 }
